# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  tests-and-linters.yml
brain_games/: brain_calc.py  brain_even.py  cli.py  game_runner.py  settings.py  shared.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
