[tool.poetry]
name = "hexlet-code"
version = "1.0.0"
description = "little games pack for training you mind"
repository = "https://github.com/vladimirbazhanov/python-project-lvl1"
authors = ["Vladimir Bazhanov <vladimir.a.bazhanov@gmail.com>"]
packages = [
  { include = "brain_games" },
]
classifiers = [
  "Topic :: Games/Entertainment"
]

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"